# vibevoice-0.5-realtime-fastrtc-plugin

./: LICENSE  README.md  pyproject.toml
examples/: fastrtc_examples.py  fastrtc_integration.py
examples/static/: voice_chat.html
src/vibevoice_fastrtc/: __init__.py  vibevoice_tts.py
src/vibevoice_fastrtc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
